# Recursive-Verifiable-Guardrails-for-Openclaw-Agents

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SKILL.md
.github/workflows/: ci.yml
crates/aegx-bundle/: Cargo.toml
crates/aegx-bundle/src/: bundle.rs  lib.rs  report.rs  verify.rs
crates/aegx-cli/: Cargo.toml
crates/aegx-cli/src/: cli.rs  lib.rs  main.rs
crates/aegx-daemon/: Cargo.toml
crates/aegx-daemon/src/: lib.rs  main.rs
crates/aegx-guard/: Cargo.toml
crates/aegx-guard/src/: alerts.rs  file_read_guard.rs  guard.rs  lib.rs  metrics.rs  network_guard.rs  output_guard.rs  policy.rs  scanner.rs  skill_verifier.rs
crates/aegx-records/: Cargo.toml
crates/aegx-records/src/: audit_chain.rs  config.rs  lib.rs  records.rs
crates/aegx-runtime/: Cargo.toml
crates/aegx-runtime/src/: hooks.rs  lib.rs  prove.rs  rollback_policy.rs  sandbox_audit.rs  self_verify.rs  snapshot.rs  workspace.rs
crates/aegx-runtime/tests/: unified_pipeline.rs
crates/aegx-types/: Cargo.toml
crates/aegx-types/src/: canonical.rs  error.rs  lib.rs  principal.rs  record.rs  taint.rs
docs/: AGENT_INTEGRATION.md  BUNDLE_FORMAT_GUIDE.md  CHANGELOG.md  CLI_REFERENCE.md  HARDENING_BASELINE_AUDIT.md  INSTALL.md  QUICKSTART.md  SPEC.md  SYSTEM_EXPLANATION.md  TROUBLESHOOTING.md  VERIFICATION_GUIDE.md  clawhub-integration.md
examples/: quickstart.sh
installer/: DEPRECATED.md  LICENSE
installer/install/: install-proven-aer.sh
installer/tools/: Cargo.toml
integrations/claude-code/: claude_code_adapter.sh
integrations/common/: aegx_platform_common.sh
integrations/manus/: manus_adapter.sh
integrations/openclaw/: openclaw_adapter.sh
packaging/skill/: package_skill.sh  validate_skill_bundle.sh
plugins/agent-see/: README.md
plugins/agent-see/.claude-plugin/: plugin.json
plugins/agent-see/hooks/: hooks.json
plugins/agent-see/hooks/scripts/: check-dependencies.sh
plugins/agent-see/skills/convert-source/: SKILL.md
plugins/agent-see/skills/convert-source/references/: output-artifacts.md
plugins/agent-see/skills/launch-artifacts/: SKILL.md
plugins/agent-see/skills/launch-artifacts/references/: launch-artifacts-detail.md
plugins/agent-see/skills/package-plugin/: SKILL.md
plugins/agent-see/skills/package-plugin/references/: harness-guides.md
plugins/agent-see/skills/verify-bundle/: SKILL.md
results/: skill_bundle_latest.json  skill_bundle_validation_latest.json
