[workspace]
resolver = "2"
members = [
    "crates/aegx-types",
    "crates/aegx-records",
    "crates/aegx-bundle",
    "crates/aegx-guard",
    "crates/aegx-runtime",
    "crates/aegx-cli",
]

# Shared dependency versions
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
bitflags = "2"
regex = "1"
walkdir = "2"
tempfile = "3"
unicode-normalization = "0.1"
jsonschema = "0.27"

# Workspace crates
aegx-types = { path = "crates/aegx-types" }
aegx-records = { path = "crates/aegx-records" }
aegx-bundle = { path = "crates/aegx-bundle" }
aegx-guard = { path = "crates/aegx-guard" }
aegx-runtime = { path = "crates/aegx-runtime" }
aegx-cli = { path = "crates/aegx-cli" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
