[package]
name = "aegx-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundle packaging and verification for AEGX"

[dependencies]
aegx-types = { workspace = true }
aegx-records = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
jsonschema = { workspace = true }
