[package]
name = "aegx-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Always-on daemon and IPC layer for AEGX"

[[bin]]
name = "aegxd"
path = "src/main.rs"

[dependencies]
aegx-types = { workspace = true }
aegx-records = { workspace = true }
aegx-guard = { workspace = true }
aegx-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
