[package]
name = "aegx-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime: snapshots, rollback, hooks, and integration for AEGX"

[dependencies]
aegx-types = { workspace = true }
aegx-records = { workspace = true }
aegx-guard = { workspace = true }
aegx-bundle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
