[package]
name = "proven-installer-tools"
version = "0.1.0"
edition = "2021"
description = "Rust tooling for Provenable.ai AER installer — manifest validation, checksum generation, version pinning"
license = "MIT"

[[bin]]
name = "installer-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
